refactor: clean up and prepare for release 1.0.0

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 ---
 layout: default
-title: Salsah
+title:
 ---
 
 <!-- introduction -->
 <section>
     <div class="section-content mdl-grid">
         <div class="mdl-cell mdl-cell--7-col">
-            <h1 class="mdl-typography--display-13 mdl-typography--font-light">System for Annotation and Linkage of Sources in Arts and
-                Humanities</h1>
-            <h2 class="mdl-typography--headline  smaller-headline">{{site.description}}</h2>
+            <h1 class="mdl-typography--display-13 mdl-typography--font-light">{{ site.title }} &mdash;<br> Jekyll template</h1>
+            <h2 class="mdl-typography--headline smaller-headline">{{site.description}}</h2>
             <div class="action">
                 {% assign grouped = site.docs | group_by: 'category' %}
                 {% for group in grouped %}
@@ -40,18 +39,13 @@ title: Salsah
 <section>
     <div class="section-content mdl-grid">
         <div class="mdl-cell mdl-cell--5-col mdl-card__media mdl-cell--hide-phone">
-            <img class="desktop-only mdl-shadow--2dp image-left" src="{{ site.baseurl }}/assets/images/annotations.jpg" alt="Work with humanities data">
+            <img class="desktop-only mdl-shadow--2dp image-left" src="{{ site.baseurl }}/assets/images/first.jpg" alt="Work with humanities data">
         </div>
         <div class="mdl-cell mdl-cell--7-col">
-            <h2 class="mdl-typography--display-1 mdl-typography--font-light">Create, Store, Share, and Work with Humanities Data</h2>
+            <h2 class="mdl-typography--display-1 mdl-typography--font-light">This can be a first title</h2>
             <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
-                A Knora repository is a place for doing research. Knora can store texts, images, audio and video
-                recordings,
-                metadata, annotations, text markup, and any other data created by humanities research. It is designed
-                for
-                long-term preservation, and at the same time it provides powerful tools for searching, annotating,
-                extending,
-                linking, sharing, and reusing data.</p>
+                A short introduction should be placed here.
+            </p>
         </div>
     </div>
 </section>
@@ -62,16 +56,13 @@ title: Salsah
 <section>
     <div class="section-content mdl-grid">
         <div class="mdl-cell mdl-cell--7-col">
-            <h2 class="mdl-typography--display-1 mdl-typography--font-light">Find and Link Data across Projects</h2>
+            <h2 class="mdl-typography--display-1 mdl-typography--font-light">Second title</h2>
             <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
-                With Knora, you can search for and link data across projects, search for dates in
-                one calendar and find corresponding dates in other calendars, link a word in a text to an annotation of
-                part
-                of an image, and search for text markup across large numbers of texts.
+                Placeholder for a second introduction.
             </p>
         </div>
         <div class="mdl-cell mdl-cell--5-col mdl-card__media mdl-cell--hide-phone">
-            <img class="desktop-only mdl-shadow--2dp image-right" src="{{ site.baseurl }}/assets/images/search.jpg" alt="Find your data">
+            <img class="desktop-only mdl-shadow--2dp image-right" src="{{ site.baseurl }}/assets/images/second.jpg" alt="Find your data">
         </div>
     </div>
 </section>
@@ -82,7 +73,7 @@ title: Salsah
     <div class="section-content mdl-typography--text-center">
         <h2 class="mdl-typography--display-1">Contribute</h2>
         <!-- <p style="text-align: center;">Test Knora today or improve the software</p> -->
-        <a class="mdl-button mdl-js-button mdl-button--raised rounded mdl-typography--display-1" href="https://github.com/dhlab-basel/Knora">
+        <a class="mdl-button mdl-js-button mdl-button--raised rounded mdl-typography--display-1" href="{{site.git.url}}">
             Code on GitHub
         </a>
     </div>
